migdb.qvto/transforms/tests/errors/error_removeProperty1b.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation error_removeProperty1b(out inoutModel : ERR);

main(){
	var errorMessage : String := "Structure doesn't contains generalClass called Tab";
	var evolutionError : EvolutionError := _evolutionError(
												1, 
												errorMessage, 
												"evolution_app.qvto");
	_errorLog(OrderedSet{evolutionError});
}